<resources>
    <string name="logger_app_name">Logger</string>
    <string name="logger_change_profile_picture">Change profile picture</string>
    <string name="logger_one">One</string>
    <string name="logger_two">Two</string>
    <string name="logger_button_with_horizontal_bias">Button with horizontal bias</string>
    <string name="logger_select_video_from_gallery">Select video from gallery</string>
    <string name="logger_chooser_title">Choose video from gallery</string>

    <string name="logger_label_cancel">Cancel</string>
    <string name="logger_label_ok">OK</string>
    <string name="logger_label_select_video">Select Video</string>
    <string name="logger_permission_title_rationale">Permission needed</string>
    <string name="logger_permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="logger_toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="logger_video_saved_at">Video saves at : $%1s</string>
    <string name="logger_title_description">A library with UI and mechanisms to trim local videos on Android applications</string>
    <string name="logger_description_app">
            # Provide UI to preview and select start/end of the video to trim
        \n\n# Thumbnails with frame by frame overview of the video
        \n\n# Works with gallery and recorded videos
    </string>
    <string name="logger_pick_a_video">Select or record a a video below to try it out:</string>
    <string name="logger_trimming_progress">Trimming your video…</string>
    <string name="logger_loading">Loading…</string>
    <string name="logger_details">Details</string>
    <string name="logger_search">Search</string>
    <string name="logger_no_logs_found">No logs found</string>
    <string name="logger_application_logs">Logs</string>
    <string name="logger_url">[URL]</string>
    <string name="logger_method">[Method]</string>
    <string name="logger_log_settings">Log Settings</string>
    <string name="logger_logging">Logging</string>
    <string name="logger_export_log">Export Log</string>
    <string name="logger_clear_data">Clear Data</string>
    <string name="logger_info">Info</string>
    <string name="logger_filter">Filter</string>
    <string name="logger_date_to">Date To</string>
    <string name="logger_date_from">Date From</string>
    <string name="logger_select_type">Select Type</string>
    <string name="logger_clear">Clear</string>
    <string name="logger_apply">Apply</string>
    <string name="logger_date">%1$s-%2$s-%3$s</string>
    <string name="logger_type">Type</string>
    <string name="logger_all">All</string>
    <string name="logger_debug">Debug</string>
    <string name="logger_warning">Warning</string>
    <string name="logger_network">Network</string>
    <string name="logger_error">Error</string>
    <string name="logger_logType">%1$s%2$s</string>
    <string name="logger_permission_need_message">App needs your permission to access the storage, Allow the permission from the Settings menu by tapping below</string>
    <string name="logger_settings">Settings</string>
    <string name="logger_cancel">Cancel</string>
    <string name="logger_from_today">Today</string>
    <string name="logger_from_yesterday">From Yesterday</string>
    <string name="logger_from_last_week">From Last Week</string>
    <string name="logger_select_date">Select One…</string>
    <string name="logger_date_">Date</string>

    <string name="logger_duration_milliseconds">%1$s ms</string>
    <string name="logger_duration_seconds">%1$s s</string>
    <string name="logger_duration_minutes">%1$s.%2$s m</string>
    <string name="logger_duration_hour">%1$s.%2$s h</string>
    <string name="logger_clear_data_alert_message">Are you sure you want to clear all logs?</string>

</resources>
