<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_bg"
        android:layout_margin="16dp">

        <RelativeLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logger_filter"
                android:layout_centerInParent="true"
                android:textColor="@color/colorDialogTitle"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close"
                android:tint="@color/colorBlack"
                android:padding="4dp"/>

        </RelativeLayout>

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logger_date_from"
            android:textColor="@color/colorDialogTitle"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:focusable="false"
            android:focusableInTouchMode="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logger_date_to"
            android:textColor="@color/colorDialogTitle"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDateTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:focusable="false"
            android:focusableInTouchMode="true"/>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logger_date_"
            android:textColor="@color/colorDialogTitle"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:textColorHint="@color/colorDialogTitle"
            android:textColor="@color/colorDialogTitle"
            android:hint="@string/logger_select_date"
            android:background="@drawable/rounded_rectangle_bg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logger_type"
            android:textColor="@color/colorDialogTitle"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:textColorHint="@color/colorDialogTitle"
            android:textColor="@color/colorDialogTitle"
            android:hint="@string/logger_select_type"
            android:background="@drawable/rounded_rectangle_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:text="@string/logger_clear"
                android:textColor="@color/colorDialogTitle"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_rectangle_bg" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvApply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:textColor="@color/colorWhite"
                android:text="@string/logger_apply"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_rectangle_bg_gray"/>


        </LinearLayout>

    </LinearLayout>


</layout>
